--- a/popup/popUp.html
+++ b/popup/popUp.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <h3>Event Recorder</h3>
+  <label for="title">Enter Testcase title</label>
+    <input type="text" id="title" placeholder="Enter Title">
   <div>
     <button id="start"><img src="../images/record.png" width="20px" height="20px"/><span>start</span></button>
     <button id="stop"><img src="../images/stop-button.png" width="20px" height="20px"/>stop</button>
-    <button id="playback"><img src="../images/left.png" width="20px" height="20px"/>playback</button>
+    <button id="playback"><img src="../images/arrow.png" width="20px" height="20px"/>download</button>
   </div>
   
   
