--- a/popup/popUp.html
+++ b/popup/popUp.html
@@ -2,21 +2,28 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Event Recorder</title>
-  <link rel="stylesheet" href="popUp.css">
-</head>
-<body>
-  <h3>Event Recorder</h3>
-  <label for="title">Enter Testcase title</label>
-    <input type="text" id="title" placeholder="Enter Title">
-  <div>
-    <button id="start"><img src="../images/record.png" width="20px" height="20px"/><span>start</span></button>
-    <button id="stop"><img src="../images/stop-button.png" width="20px" height="20px"/>stop</button>
-    <button id="playback"><img src="../images/arrow.png" width="20px" height="20px"/>download</button>
-  </div>
-  
-  
-  <script src="popup.js"></script>
-</body>
+  <head>
+    <title>Automatic Testcase Generator</title>
+    <link rel="stylesheet" href="popUp.css" />
+  </head>
+  <body>
+    <h3>Automatic Testcase Generator</h3>
+    <label for="title">Enter Testcase title</label>
+    <input type="text" id="title" placeholder="Enter Title" />
+    <div>
+      <button id="start">
+        <img src="../images/start.png" width="20px" height="20px" /><span
+          >start</span
+        >
+      </button>
+      <button id="stop">
+        <img src="../images/stop.png" width="20px" height="20px" />stop
+      </button>
+      <button id="playback">
+        <img src="../images/download.png" width="20px" height="20px" />download
+      </button>
+    </div>
+
+    <script src="popup.js"></script>
+  </body>
 </html>
